# PDF_Toolbox

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
legacy/: pdf_protect_gui.py  pdf_to_png_converter.py  pdf_unlocker_007_(work).py
scripts/: generate_icon.py
src/pdf_toolbox/: __init__.py  __main__.py  app.py
src/pdf_toolbox/core/: compress.py  convert.py  merge.py  protect.py  reorder.py  rotate.py  split.py  unlock.py  utils.py  watermark.py
src/pdf_toolbox/gui/: icons.py  main_window.py  theme.py
src/pdf_toolbox/gui/pages/: base_page.py  compress_page.py  convert_page.py  home_page.py  merge_page.py  protect_page.py  reorder_page.py  rotate_page.py  split_page.py  unlock_page.py  watermark_page.py
src/pdf_toolbox/gui/widgets/: drop_zone.py  file_list.py  log_panel.py  output_dir_selector.py  password_dialog.py  progress_panel.py
src/pdf_toolbox/workers/: base_worker.py  compress_worker.py  convert_worker.py  merge_worker.py  protect_worker.py  reorder_worker.py  rotate_worker.py  split_worker.py  unlock_worker.py  watermark_worker.py
tests/test_core/: test_imports.py  test_split.py  test_utils.py
