[project]
name = "pdf-toolbox"
version = "0.2.0"
description = "A unified PySide6 PDF processing toolbox"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "LostSunset" }]
dependencies = [
    "PySide6>=6.8",
    "pikepdf>=9.0",
    "PyPDF2>=3.0",
    "PyMuPDF>=1.25",
    "reportlab>=4.0",
]

[project.scripts]
pdf-toolbox = "pdf_toolbox.app:main"

[project.gui-scripts]
pdf-toolbox-gui = "pdf_toolbox.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_toolbox"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pyinstaller>=6.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pdf_toolbox"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
